src/org/o7planning/simplewebapp/conn/buildlog.txt
/tmp/java_8uNhGO/MySQLConnUtils.java:38: error: reached end of file while parsing
}
 ^
1 error

